hphp/hack/test/typecheck/xhp_attr_spread_4.php.like_types.exp
File "xhp_attr_spread_4.php", line 4, characters 13-15:
Invalid xhp value for attribute :name in :bar (Typing[4110])
File "xhp_attr_spread_4.php", line 8, characters 13-18:
Expected string
File "xhp_attr_spread_4.php", line 4, characters 13-15:
But got int
